--- a/tests/fixtures/config.yml
+++ b/tests/fixtures/config.yml
@@ -5,11 +5,11 @@ services:
     key_factory:
         class: KeyFactory
         private: true
-    public_keys_to_encrypt_against:
+    my_public_key:
         class: Array
         private: true
         factory_service: key_factory
-        factory_method: getCertificates
+        factory_method: getCertificate
     my_private_key:
         class: String
         private: true
@@ -28,5 +28,5 @@ services:
             -
                 name: cache.encrypted
                 alias: my_pki_encrypted_cache
-                certificates: '@public_keys_to_encrypt_against'
+                certificate: '@my_public_key'
                 key: '@my_private_key'
