--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - 7.0
@@ -17,7 +16,7 @@ matrix:
   fast_finish: true
 
 install:
-  - travis_retry composer update $COMPOSER_OPTS --no-interaction
+  - travis_retry composer update $COMPOSER_OPTS --no-interaction --prefer-source
 
 script:
   - vendor/bin/phpunit --coverage-clover=coverage.clover
