--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     "require": {
         "php": ">=5.5",
         "jsq/doctrine-cache-encrypter": "~0.3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/http-kernel": "~2.3|~3.0"
+        "symfony/dependency-injection": "~2.6|~3.0",
+        "symfony/http-kernel": "~2.6|~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "symfony/framework-bundle": "~2.3"
+        "symfony/framework-bundle": "~2.6|~3.0"
     },
     "autoload": {
         "psr-4": {
