--- a/tests/fixtures/config.yml
+++ b/tests/fixtures/config.yml
@@ -13,7 +13,12 @@ services:
         class: stdClass
         private: true
         factory: ["@key_factory", getPrivateKey]
-    cache:
+    my_iron_password:
+        class: Jsq\Iron\Password
+        arguments:
+            - a_very_very_long_password_one_long_enough_to_meet_the_minimum
+            - password_id
+    my_cache:
         class: Doctrine\Common\Cache\ArrayCache
         tags:
             -
@@ -28,3 +33,8 @@ services:
                 alias: my_pki_encrypted_cache
                 certificate: '@my_public_key'
                 key: '@my_private_key'
+            -
+                name: cache.encrypted
+                alias: my_iron_cache
+                password: '@my_iron_password'
+                iron: true
